buttons are now aligned correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,17 +295,20 @@ box-sizing: border-box;
 button{
     margin: 10px;
 }
-
-.firstButton{
-    margin-left:0;
-
+/* Setting the first and last button to have 0 margin on left and right side */
+.firstButton {
+    margin-left: 0;
 }
 
+.lastButton {
+    margin-right: 0; 
+}
+/* Letting the tables equal out on the page */
 table {
     table-layout: fixed;
     width: 100%;
 }
-
+/* Changing color of the buttons */
 .delete-pantry-item,
 .delete-shopping-list-item {
     background: red;
